@@ -1,3 +1,7 @@
+##### 17
+* Updated for Bagnon 7.2 onwards
+* Now can skin bag buttons as well (can be configured separately)
+
 ##### 16
 * Updated for Return to Kharazan
 
